--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch src/img/scss:build/css",
-    "css": "gulp css"
+    "dev": "gulp dev"
   },
   "repository": {
     "type": "git",
